# dicto

./: .gitignore  README.md  biome.json  package.json
apps/desktop/: biome.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  widget.html
apps/desktop/src/: bindings.ts  main.tsx  routeTree.gen.ts  widget.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: events.rs  formatter.rs  lib.rs  model_download.rs  shortcut.rs  transcription.rs  tray.rs  window.rs
apps/desktop/src-tauri/src/commands/: error.rs  keys_vault.rs  keyterms.rs  mod.rs  notes.rs  settings.rs  shortcuts.rs  transcriptions.rs  writing_styles.rs
apps/desktop/src-tauri/src/db/: migrations.rs  mod.rs  pool.rs
apps/desktop/src-tauri/src/migrations/: 001_create_transcriptions.sql  002_create_keyterms.sql  003_create_shortcuts.sql  004_create_writing_style.sql  005_create_keys_vault.sql  006_create_settings.sql  007_create_notes.sql  008_add_cloud_transcription_providers.sql  009_rename_notes_to_general.sql
apps/desktop/src/components/: app-sidebar.tsx  auth-left-panel.tsx  cmdk.tsx  dictation-widget.tsx  dicto-logo.tsx  email-signin.tsx  keyterms-listing-view.tsx  note-editor.tsx  notes-listing-view.tsx  settings-dialog.tsx  settings-dropdown.tsx  shell.tsx  shortcut-item.tsx  shortcuts-listing-view.tsx  title-bar.tsx  transcriptions-listing-view.tsx  user-dropdown.tsx  widget.tsx  writing-style-view.tsx
apps/desktop/src/db/: index.ts
apps/desktop/src/hooks/: use-accessibility-permission.ts  use-current-shortcut.ts  use-keys-vault.ts  use-keyterms.ts  use-microphone-permission.ts  use-notes.ts  use-settings.ts  use-shortcut-editor.ts  use-shortcuts.ts  use-transcriptions.ts  (+1 more)
apps/server/: .env.example  drizzle.config.ts  package.json
apps/server/src/: ai.ts  index.ts
(+35 files in other folders)
