[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-notification = "2"
rdev = { git = "https://github.com/fufesou/rdev" }
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
cpal = "0.15"
crossbeam-channel = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1.0"
tar = "0.4"
fs_extra = "1.3"
whisper-rs = "0.14"
llama-cpp-2 = "0.1"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
deepgram = "0.7.0"
bytes = "1.5"
tauri-plugin-http = "2"
tauri-plugin-os = "2.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"

